-fix: overworked bugs, like a useless scrollbar

--- a/frontend/src/app/multivalue-vote/multivalue-vote.component.css
+++ b/frontend/src/app/multivalue-vote/multivalue-vote.component.css
@@ -178,7 +178,6 @@ img {
 .confirmation-dialog {
   background-color: #f9f9f9;
   border: 2px solid #CCCCCC;
-  border-radius: 10px;
   padding: 20px;
   width: 300px;
   text-align: center;
