--- a/frontend/src/app/results/results.component.css
+++ b/frontend/src/app/results/results.component.css
@@ -77,7 +77,7 @@ h2 {
 
 #result-content {
   display: block;
-  overflow-y: scroll;
+  overflow-y: hidden;
   padding: 20px 5px 5px;
   height: 100%;
   width: 100%;
